--- a/Sports_Matcher/Base.lproj/Main.storyboard
+++ b/Sports_Matcher/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,69 +22,88 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V8N-ze-kdh">
-                                <rect key="frame" x="40" y="57" width="45" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V8N-ze-kdh">
+                                <rect key="frame" x="37" y="62" width="45" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vXv-NF-S8o">
-                                <rect key="frame" x="42" y="147" width="41" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Zip Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KP9-K1-pE6">
-                                <rect key="frame" x="27" y="248" width="70" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5gf-Rf-rZp">
-                                <rect key="frame" x="139" y="52" width="220" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AFf-Il-2Df">
-                                <rect key="frame" x="139" y="142" width="220" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X9e-Lp-t7F">
-                                <rect key="frame" x="139" y="244" width="220" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ONc-78-b4D">
-                                <rect key="frame" x="163" y="629" width="49" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ONc-78-b4D">
+                                <rect key="frame" x="162.5" y="629" width="49" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="qs2-zP-Kv3"/>
+                                </constraints>
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="submit:" destination="A8Z-u8-hIy" eventType="touchUpInside" id="jtl-vx-5zn"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SPORT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tYR-d3-O2V">
-                                <rect key="frame" x="160" y="323" width="55" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PICK A SPORT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tYR-d3-O2V">
+                                <rect key="frame" x="131.5" y="323" width="112" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dlr-gH-wY6">
-                                <rect key="frame" x="68" y="352" width="223" height="178"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dlr-gH-wY6">
+                                <rect key="frame" x="64" y="352" width="231" height="179"/>
                             </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zip Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KP9-K1-pE6">
+                                <rect key="frame" x="24" y="274" width="70" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X9e-Lp-t7F">
+                                <rect key="frame" x="143" y="269" width="160" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5gf-Rf-rZp">
+                                <rect key="frame" x="143" y="53" width="160" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AFf-Il-2Df">
+                                <rect key="frame" x="143" y="215" width="160" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vXv-NF-S8o">
+                                <rect key="frame" x="39" y="218" width="41" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="X9e-Lp-t7F" firstAttribute="leading" secondItem="KP9-K1-pE6" secondAttribute="trailing" constant="49" id="5ZN-11-eHs"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Dlr-gH-wY6" secondAttribute="trailing" constant="64" id="9YG-0Z-dfr"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5gf-Rf-rZp" secondAttribute="trailing" constant="56" id="9rl-fN-Mx1"/>
+                            <constraint firstItem="KP9-K1-pE6" firstAttribute="leading" secondItem="txo-IS-jtP" secondAttribute="leadingMargin" constant="8" id="GsA-sn-uKX"/>
+                            <constraint firstItem="X9e-Lp-t7F" firstAttribute="top" secondItem="AFf-Il-2Df" secondAttribute="bottom" constant="24" id="NOu-Ib-12j"/>
+                            <constraint firstItem="AFf-Il-2Df" firstAttribute="trailing" secondItem="X9e-Lp-t7F" secondAttribute="trailing" id="Ntz-5z-ZA5"/>
+                            <constraint firstItem="KP9-K1-pE6" firstAttribute="centerY" secondItem="X9e-Lp-t7F" secondAttribute="centerY" id="VyT-4z-xgf"/>
+                            <constraint firstItem="tYR-d3-O2V" firstAttribute="centerY" secondItem="txo-IS-jtP" secondAttribute="centerY" id="WTE-Rh-aGn"/>
+                            <constraint firstItem="V8N-ze-kdh" firstAttribute="centerX" secondItem="vXv-NF-S8o" secondAttribute="centerX" id="Xgv-pS-afy"/>
+                            <constraint firstItem="Dlr-gH-wY6" firstAttribute="leading" secondItem="txo-IS-jtP" secondAttribute="leadingMargin" constant="48" id="aGp-hI-2d7"/>
+                            <constraint firstItem="5gf-Rf-rZp" firstAttribute="leading" secondItem="AFf-Il-2Df" secondAttribute="leading" id="gIZ-0b-RFw"/>
+                            <constraint firstItem="tYR-d3-O2V" firstAttribute="centerX" secondItem="txo-IS-jtP" secondAttribute="centerX" id="h3l-SY-9xZ"/>
+                            <constraint firstItem="Dlr-gH-wY6" firstAttribute="top" secondItem="tYR-d3-O2V" secondAttribute="bottom" constant="8" symbolic="YES" id="h5F-f9-gnE"/>
+                            <constraint firstItem="AFf-Il-2Df" firstAttribute="leading" secondItem="X9e-Lp-t7F" secondAttribute="leading" id="lln-n1-ji4"/>
+                            <constraint firstItem="5gf-Rf-rZp" firstAttribute="trailing" secondItem="AFf-Il-2Df" secondAttribute="trailing" id="n3Z-ki-2iB"/>
+                            <constraint firstItem="ONc-78-b4D" firstAttribute="top" secondItem="Dlr-gH-wY6" secondAttribute="bottom" constant="98" id="n9z-i0-zOP"/>
+                            <constraint firstItem="5gf-Rf-rZp" firstAttribute="top" secondItem="OAz-4D-Zkt" secondAttribute="bottom" constant="33" id="nMO-iT-r0G"/>
+                            <constraint firstItem="tYR-d3-O2V" firstAttribute="top" secondItem="X9e-Lp-t7F" secondAttribute="bottom" constant="24" id="nWM-ln-ega"/>
+                            <constraint firstItem="V8N-ze-kdh" firstAttribute="bottom" secondItem="5gf-Rf-rZp" secondAttribute="bottom" id="pgx-ki-9jy"/>
+                            <constraint firstItem="vXv-NF-S8o" firstAttribute="centerX" secondItem="KP9-K1-pE6" secondAttribute="centerX" id="rTn-Qn-OXI"/>
+                            <constraint firstItem="tYR-d3-O2V" firstAttribute="centerX" secondItem="ONc-78-b4D" secondAttribute="centerX" id="tnX-fX-DtT"/>
+                            <constraint firstItem="vXv-NF-S8o" firstAttribute="baseline" secondItem="AFf-Il-2Df" secondAttribute="baseline" id="vmx-mO-vHE"/>
+                            <constraint firstItem="B4o-rf-gmZ" firstAttribute="top" secondItem="ONc-78-b4D" secondAttribute="bottom" constant="8" symbolic="YES" id="y2n-RQ-Rjm"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="email" destination="AFf-Il-2Df" id="m7n-I7-SYa"/>
